--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,9 @@ footer{
     color: white;
     text-align: center;
 }
-
+.c{
+    text-align: center;
+}
 footer a{
     color: white;
     text-decoration: none;
